--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,260 @@
 .App {
   text-align: center;
+  /* background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(https://th.bing.com/th/id/R.8dea1d0c7a92e6f0d91d5ef0c5cf6a9f?rik=xl1Mxmoyod2%2f2A&pid=ImgRaw&r=0); */
+  font-family: Arial, sans-serif;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  background-color: rgb(176, 2, 2);
+  /* color: #fff; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+nav ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin: 0 10px;
+  margin-top: auto;
+}
+
+nav ul li a {
+  font-size: larger;
+  color: red;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+nav ul li a:hover {
+  color: green;
+}
+
+header button {
+  text-decoration: none;
+  padding: 5px 10px;
+  font-size: 10px;
+  transition: color 0.3s ease;
+}
+
+img {
+  width: 220px;
+  height: 300px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0px;
+}
+
+.column {
+  flex: 1;
+  margin: 10px 75px;
+}
+
+.card {
+  background-color: #fff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.738);
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+}
+
+.card img {
+  width: 220px;
+  height: 300px;
+  border-radius: 5px;
+}
+
+.h3 {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.year, .nation {
+  margin: 5px 0;
+}
+
+button {
+  background-color: #f44336;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: green;
+}
+
+button:active {
+  transform: translateY(2px);
+}
+
+
+footer {
+  background-color: rgb(176, 2, 2);
+  color: #fff;
+  padding-bottom: 20px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .column {
+    margin: 20px 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 70px auto;
+  padding: 5px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.popup img {
+  width: 350px;
+  height: 430px;
+}
+
+.popup h1 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+
+.popup .year, .nation {
+  font-weight: bolder;
+}
+
+.popup .close {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bolder;
+  text-decoration: none;
+  color: red;
+}
+
+.popup .close:hover {
+  color: #06D85F;
+}
+
+.popup .content {
+  margin: auto;
+  max-height: 30%;
+  overflow: auto;
+}
+
+.detail-container {
+    max-width: 100%;
+    margin: 0 20px;
+}
+
+.product-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.badge {
+  background-color: #ef5777;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product-tumb {
+  margin-bottom: 20px;
+}
+
+.product-tumb img {
+  max-width: 100%;
+  height: auto;
+}
+
+.product-details {
+  text-align: center;
+}
+
+.product-details h4 {
+  margin-bottom: 20px;
+}
+
+.product-details p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.product-bottom-details {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-price {
+  font-size: 18px;
+  font-weight: bold;
 }
